changed some style css

--- a/src/index.html
+++ b/src/index.html
@@ -65,7 +65,7 @@
               utc <span class="utc">-05:00</span>
             </div>
           </li>
-          <li class="result__internet">
+          <li class="result__internet result__lastchild">
             <div class="result__title">isp</div>
             <div class="result__value isp">spaceX Starlink</div>
           </li>
