--- a/src/index.html
+++ b/src/index.html
@@ -78,5 +78,13 @@
       </section>
       <section id="map"></section>
     </div>
+    <footer class="copy">
+      <p>
+        Coded by
+        <a target="_blank" href="https://www.linkedin.com/in/youness-ailal/"
+          >@Youness Ailal</a
+        >
+      </p>
+    </footer>
   </body>
 </html>
